feat: add shfmt support for shell script formatting
Add shfmt as a second WASM plugin alongside the existing gofmt plugin. This
change refactors the build system to support multiple formatters, updates the
release process to handle both plugins, and incorporates the mvdan.cc/sh
parsing and formatting library for shell script support.

Apply formatting

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -8,7 +8,7 @@
     [
       "@semantic-release/exec",
       {
-        "prepareCmd": "echo '${nextRelease.version}' > VERSION && make build"
+        "prepareCmd": "echo '${nextRelease.version}' > cmd/gofmt/VERSION && echo '${nextRelease.version}' > cmd/shfmt/VERSION && make build"
       }
     ],
     [
@@ -16,8 +16,7 @@
       {
         "assets": [
           {
-            "path": "build/dprint.wasm",
-            "label": "dprint.wasm"
+            "path": "build/*.wasm"
           }
         ]
       }
@@ -27,7 +26,8 @@
       {
         "message": "chore(release): ${nextRelease.version} [skip ci]\\n\\n${nextRelease.notes}",
         "assets": [
-          "VERSION"
+          "cmd/gofmt/VERSION",
+          "cmd/shfmt/VERSION"
         ]
       }
     ]
